# Ruyi-Models

./: README.md  README_CN.md  predict_i2v.py  predict_i2v_80g.py  pyproject.toml  requirements.txt
assets/: gpu_memory_appendix.md
comfyui/: README.md  README_CN.md  comfyui_nodes.py
comfyui/workflows/: workflow-ruyi-i2v-start-end-frames-80g.json  workflow-ruyi-i2v-start-end-frames.json  workflow-ruyi-i2v-start-frame-80g.json  workflow-ruyi-i2v-start-frame.json
config/: default.yaml
ruyi/data/: bucket_sampler.py
ruyi/models/: __init__.py  autoencoder_magvit.py  transformer3d.py
ruyi/pipeline/: pipeline_ruyi_inpaint.py
ruyi/utils/: utils.py
ruyi/vae/ldm/modules/diffusionmodules/: model.py
ruyi/vae/ldm/modules/image_degradation/: bsrgan.py  utils_image.py
ruyi/vae/ldm/modules/losses/: vqperceptual.py
